@@ -1,3 +1,4 @@
+* Rename inventory count quantity_added to quantity
 * Add document source on move of product quantities by warehouse
 * Add relate from assigned shipment to products quantities by warehouse
 * Show quantities by warehouse for many products
